--- a/static/css/index.css
+++ b/static/css/index.css
@@ -1,4 +1,4 @@
-#camera, #model {
+#camera-container, #model {
     position: relative;
     display: inline-block;
 }
@@ -7,6 +7,7 @@
     margin-left: 340px;
 }
 
+#webcam,
 #overlay,
 #overlay2,
 #overlay3 {
